--- a/sass/main.scss
+++ b/sass/main.scss
@@ -116,9 +116,9 @@ footer {
     margin: 10px;
     color: #aaa;
     text-decoration: none;
-    font-size: 2rem;
+    font-size: 1.5rem;
     font-weight: bold;
-    text-shadow: 0px 2px 3px #fff;
+    //text-shadow: 0px 2px 3px #fff;
     vertical-align: middle;
     &:hover {
       color: $secondary-color;
