Double quote the strings

--- a/views/timeslot.tmpl
+++ b/views/timeslot.tmpl
@@ -164,6 +164,6 @@
 {{define "footer-scripts"}}
 <script src="{{url "/js/jquery.prettySocial.min.js"}}"></script>
 <script type="text/javascript" class="source">
-  $('.prettySocial').prettySocial();
+  $(".prettySocial").prettySocial();
 </script>
 {{end}}
