--- a/views/show.tmpl
+++ b/views/show.tmpl
@@ -47,44 +47,44 @@
         <h2>Description</h2>
         <p>{{html .Show.Description}}</p>
         <hr>
-            <div class="row justify-content-between">
+        <div class="row justify-content-end">
 {{end}}
-                <div class="col-auto share-links ">
-                    <h3>Share</h3>
-                    <a href="#"
-                        data-type="twitter"
-                        data-url="{{.PageContext.FullURL}}/schedule/shows/{{.PageData.Show.ShowID}}"
-                        {{if .PageData.Show.Photo}}
-                            data-media="{{.PageContext.FullURL}}{{.PageData.Show.Photo}}"
-                        {{end}}
-                        data-description="Checkout {{.PageData.Show.Title}} on {{.PageContext.LongName}}"
-                        data-via="{{.PageContext.MainTwitter}}"
-                        class="prettySocial fa fa-twitter">
-                    </a>
+          <div class="col-auto share-links">
+              <span class="h5 mg-right-5">Share:</span>
+              <a href="#"
+                  data-type="twitter"
+                  data-url="{{.PageContext.FullURL}}/schedule/shows/{{.PageData.Show.ShowID}}"
+                  {{if .PageData.Show.Photo}}
+                      data-media="{{.PageContext.FullURL}}{{.PageData.Show.Photo}}"
+                  {{end}}
+                  data-description="Checkout {{.PageData.Show.Title}} on {{.PageContext.LongName}}"
+                  data-via="{{.PageContext.MainTwitter}}"
+                  class="prettySocial fa fa-twitter">
+              </a>
 
-                    <a href="#"
-                        data-type="facebook"
-                        data-url="{{.PageContext.FullURL}}/schedule/shows/{{.PageData.Show.ShowID}}"
-                        data-title="{{.PageData.Show.Title}} | {{.PageContext.ShortName}}"
-                        data-description="{{.PageData.Show.Description}}"
-                        {{if .PageData.Show.Photo}}
-                            data-media="{{.PageContext.FullURL}}{{.PageData.Show.Photo}}"
-                        {{end}}
-                        class="prettySocial fa fa-facebook">
-                    </a>
+              <a href="#"
+                  data-type="facebook"
+                  data-url="{{.PageContext.FullURL}}/schedule/shows/{{.PageData.Show.ShowID}}"
+                  data-title="{{.PageData.Show.Title}} | {{.PageContext.ShortName}}"
+                  data-description="{{.PageData.Show.Description}}"
+                  {{if .PageData.Show.Photo}}
+                      data-media="{{.PageContext.FullURL}}{{.PageData.Show.Photo}}"
+                  {{end}}
+                  class="prettySocial fa fa-facebook">
+              </a>
 
-                    <a href="#"
-                        data-type="googleplus"
-                        data-url="{{.PageContext.FullURL}}/schedule/shows/{{.PageData.Show.ShowID}}"
-                        data-description="{{.PageData.Show.Description}}"
-                        {{if .PageData.Show.Photo}}
-                            data-media="{{.PageContext.FullURL}}{{.PageData.Show.Photo}}"
-                        {{end}}
-                        class="prettySocial fa fa-google">
-                    </a>
+              <a href="#"
+                  data-type="googleplus"
+                  data-url="{{.PageContext.FullURL}}/schedule/shows/{{.PageData.Show.ShowID}}"
+                  data-description="{{.PageData.Show.Description}}"
+                  {{if .PageData.Show.Photo}}
+                      data-media="{{.PageContext.FullURL}}{{.PageData.Show.Photo}}"
+                  {{end}}
+                  class="prettySocial fa fa-google">
+              </a>
 
-                </div>
             </div>
+        </div>
       </div>
     </div>
   </div>
