Add Schedule Title

--- a/views/schedule_week.tmpl
+++ b/views/schedule_week.tmpl
@@ -1,3 +1,4 @@
+{{define "title"}}{{.PageContext.ShortName}} | Schedule | {{week (index .PageData.Schedule.Dates 0)}}{{end}}
 {{define "content"}}
 {{with .PageData}}
 
