Nicer no schedule message

--- a/views/schedule_week.tmpl
+++ b/views/schedule_week.tmpl
@@ -81,9 +81,13 @@
       {{end}}
     </div>
   {{else}}
-    <p>Nothing today</p>
+    <div class="row justify-content-center p-5">
+      <div class="col-12 col-lg-8 p-5 text-center schedule-blocks-regular">
+        <h3>There's nothing on for this week.</p>
+        <h4>We're most likely off air, or we haven't scheduled it yet!</h4>
+      </div>
+    </div>
   {{end}}
-
   </div>
 </div>
 
