--- a/views/schedule_week.tmpl
+++ b/views/schedule_week.tmpl
@@ -28,7 +28,7 @@
         <div class="schedule-keys">
           <div class="key-row">
             <span class="h5">Key: </span>
-            <span class="schedule-keys-regular">Shows</span>
+            <span class="schedule-keys-regular">Daytime</span>
             <span class="schedule-keys-flagship">Flagship</span>
             <span class="schedule-keys-event">Events</span>
             <span class="schedule-keys-specialist-music">Specialist Music</span>
