--- a/views/timeslot.tmpl
+++ b/views/timeslot.tmpl
@@ -1,4 +1,4 @@
-{{define "title"}}{{.PageContext.ShortName}} | {{.PageData.Timeslot.Title}} {{.PageData.Timeslot.StartTime.Format "Monday, _2 Jan 2006 - 15:04"}}{{end}}
+{{define "title"}}{{.PageContext.ShortName}} | {{.PageData.Timeslot.Title}} | {{.PageData.Timeslot.StartTime.Format "Monday, _2 Jan 2006 - 15:04"}}{{end}}
 
 {{define "open-graph"}}
 <meta name="twitter:card" content="summary">
