--- a/sass/elements/_schedule.scss
+++ b/sass/elements/_schedule.scss
@@ -16,6 +16,14 @@ $shadow: rgba(0, 0, 0, 0.5);
     background-color: tint($bg-color, 60%);
   }
 
+  &.disabled {
+    border-bottom: rgb(150, 150, 150) solid 10px;
+
+    &:hover {
+      background-color: $white;
+    }
+  }
+
   box-shadow: 0 2px 4px $shadow;
 }
 @mixin schedule-key($color) {
