--- a/views/schedule_week.tmpl
+++ b/views/schedule_week.tmpl
@@ -103,7 +103,7 @@
     </div>
   {{else}}
     <div class="row justify-content-center p-5">
-      <div class="col-12 col-lg-8 p-5 text-center schedule-blocks-regular">
+      <div class="col-12 col-lg-8 p-5 text-center schedule-blocks-regular disabled">
         <h3>There's nothing on for this week.</p>
         <h4>We're most likely off air, or we haven't scheduled it yet!</h4>
       </div>
