--- a/sass/elements/_schedule.scss
+++ b/sass/elements/_schedule.scss
@@ -48,7 +48,12 @@ $shadow: rgba(0, 0, 0, 0.5);
   padding-bottom: 10px;
 
   .row-headers {
-    width: 8%;
+    width: 13.5%;
+
+    &:first-of-type {
+      width: 5%;
+    }
+
   }
 }
 
@@ -59,7 +64,7 @@ $shadow: rgba(0, 0, 0, 0.5);
   display: inline-block;
   vertical-align: top;
   text-align: left;
-  width: 11%;
+  width: 13.09%;
 
   thead {
     th {
@@ -84,10 +89,17 @@ $shadow: rgba(0, 0, 0, 0.5);
     }
   }
 
+
+  .day-header {
+    text-align: center;
+    font-weight: 500;
+  }
+
   .time-header {
     border: 0;
+    line-height: 1em;
     text-align: center;
-
+    font-weight: 500;
     .mobile-only {
       display: none;
     }
@@ -211,7 +223,6 @@ $sustainer-color: tint($primary-color, 40%);
     margin-bottom: 10px;
     padding: 10px;
     border-radius: 2px;
-
 
     .day-header,
     .time-header {
