--- a/views/schedule_week.tmpl
+++ b/views/schedule_week.tmpl
@@ -22,7 +22,7 @@
     <div class="row">
       <div class="col-12 col-lg-6">
         <h1 class="display-4 mobile-hide">Schedule</h1>
-        <h5 class="muted mobile-hide">{{week (index .Schedule.Dates 0)}}</h5>
+        <h5 class="text-muted mobile-hide">{{week (index .Schedule.Dates 0)}}</h5>
       </div>
       <div class="col-12 col-lg-6 justify-content-end">
         <div class="schedule-keys">
