--- a/sass/main.scss
+++ b/sass/main.scss
@@ -107,6 +107,23 @@ footer {
   font-weight: 100;
 }
 
+.mg-right-5 {
+  margin-right: 5px;
+}
+
+.share-links {
+  a {
+    margin-right: 10px;
+    color: tint($black, 45%);
+    text-decoration: none;
+    font-size: 1.5rem;
+    font-weight: bold;
+
+    &:hover {
+      color: $secondary-color;
+    }
+  }
+}
 // User page styling.
 .user-img {
   //border: #e1e1e1 7px solid;
