--- a/views/show.tmpl
+++ b/views/show.tmpl
@@ -81,7 +81,6 @@
         <h3><small>Explore the show catalogue, and listen back to your favorite episodes!</small></h3>
         <a href="/ontap/">View all of our on demand content...</a>
       </div>
-{{with .PageData}}
       <div class="col-12 col-md-6 col-lg-4 p-4 bg-off-white">
         <h2>
           Seasons
@@ -96,7 +95,7 @@
             </tr>
           </thead>
           <tbody>
-          {{range .Seasons}}
+          {{range .PageData.Seasons}}
             {{if ne .SeasonNum 0}}
               <tr class="timeslot-filter-season" data-SeasonID="{{.SeasonID}}">
                 <td>{{.SeasonID}}</td>
@@ -113,9 +112,16 @@
       </div>
       <div id="timeslot-latest" class="col-12 col-md-6 col-lg-4 p-4 bg-white">
         <h3>Latest Episode</h3>
-        <p>Catchup with the latest episode from !!DATE!!</p>
-        !!MixClouder iFrame
+        <p>Catchup with the latest episode from <strong>{{.PageData.LatestTimeslot.StartTime.Format "Monday, _2 Jan 2006"}}</strong></p>
+        {{if .PageData.LatestMixcloud}}
+          <iframe width="100%" height="120" src="https://www.mixcloud.com/widget/iframe/?feed={{.PageData.LatestTimeslot.MixcloudStatus}}&hide_cover=1&light=1"
+            frameborder="0"></iframe>
+        {{else}}
+          <p><strong>This episode isn't available on {{.PageContext.ShortName}} {{.PageContext.ODName}}, sorry about that.</strong></p>
+        {{end}}
+        <a href="/schedule/shows/timeslots/{{.PageData.LatestTimeslot.TimeslotID}}/">View full episode information...</a>
       </div>
+{{with .PageData}}
       <div id="timeslot-list" class="col-12 col-md-6 col-lg-4 p-4 bg-white">
         <h2 class="inline">Episodes</h2><h3 id="timeslot-season-title" class="inline"></h3>
         <table id="timeslots" class="table timeslots-table">
@@ -124,7 +130,7 @@
               <th>SeasonID</th>
               <th>Season</th>
               <th>Episode</th>
-              <th>Broacast Time</th>
+              <th>Broadcast Time</th>
             </tr>
           </thead>
           <tbody>
