--- a/views/show.tmpl
+++ b/views/show.tmpl
@@ -164,5 +164,25 @@
 <link rel="stylesheet" type="text/css" href="//cdn.datatables.net/1.10.16/css/jquery.dataTables.css">
 <script src="//cdn.datatables.net/1.10.16/js/jquery.dataTables.min.js"></script>
 <script src="//cdn.datatables.net/plug-ins/1.10.16/api/fnFindCellRowIndexes.js"></script>
+<script>
+  $.fn.dataTable.Api.register('row().show()', function() {
+    var page_info = this.table().page.info();
+    // Get row index
+    var new_row_index = this.index();
+    // Row position
+    var row_position = this.table().rows()[0].indexOf( new_row_index );
+    // Already on right page ?
+    if( row_position >= page_info.start && row_position < page_info.end ) {
+        // Return row object
+        return this;
+    }
+    // Find page number
+    var page_to_display = Math.floor( row_position / this.table().page.len() );
+    // Go to that page
+    this.table().page( page_to_display );
+    // Return row object
+    return this;
+  });
+</script>
 <script src="{{url "/js/show.js"}}"></script>
 {{end}}
