Match current show page styling.

--- a/views/people.tmpl
+++ b/views/people.tmpl
@@ -38,9 +38,9 @@
             <div class="user-img profile">
               <img class="img-fluid" src="https://ury.org.uk{{.User.Photo}}" alt="Photo of {{.User.Fname}} {{.User.Sname}}">
             </div>
-            <div class="row text-muted">
-              <div class="col text-right">
-                <span>Shows: {{len .ShowCredits}}</span>
+            <div class="row">
+              <div class="col text-center">
+                <h6>Shows: {{len .ShowCredits}}</h6>
               </div>
             </div>
           </div>
