Fix duration format

--- a/views/timeslot.tmpl
+++ b/views/timeslot.tmpl
@@ -44,7 +44,7 @@
         alt="{{.Timeslot.Title}} Logo">
         <div class="row">
           <div class="col text-center">
-            <h6>Duration: {{.Timeslot.Duration}}</h6>
+            <h6>Duration: {{formatDuration .Timeslot.Duration}}</h6>
           </div>
         </div>
       </div>
