Change duration value to not be a header
been meaning to do this, so I though I would throw this in here

--- a/views/timeslot.tmpl
+++ b/views/timeslot.tmpl
@@ -44,7 +44,7 @@
         alt="{{.Timeslot.Title}} Logo">
         <div class="row">
           <div class="col text-center">
-            <h6>Duration: {{formatDuration .Timeslot.Duration}}</h6>
+            <span class="h6">Duration: </span><span>{{formatDuration .Timeslot.Duration}}</span>
           </div>
         </div>
       </div>
