--- a/sass/main.scss
+++ b/sass/main.scss
@@ -236,6 +236,7 @@ footer {
 .jumbotron {
   text-align: center;
   border-bottom: 1px solid #e5e5e5;
+
   .btn {
     padding: 14px 24px;
     font-size: 21px;
@@ -301,18 +302,22 @@ footer {
   #timeslot-season-title {
     color: #666;
   }
+
   .dataTables_wrapper .dataTables_paginate {
     float: none;
     text-align: center;
   }
+
   #timeslot-latest {
     display: none;
   }
+
   :not(.dataTable) {
     tr th:first-of-type,
     tr td:first-of-type {
       display: none;
     }
+
     tr:nth-child(odd) {
       td:nth-of-type(2) {
         font-size: 1.5em;
@@ -321,16 +326,18 @@ footer {
         width: 60px;
       }
     }
+
     tr:nth-child(even) {
       td:nth-of-type(2) {
         color: $black;
-        font-size:1.5em;
+        font-size: 1.5em;
         text-align: center;
         background: $off-white-color;
         width: 60px;
       }
     }
   }
+
   .dataTable {
     tr:nth-child(odd) {
       td:first-of-type {
@@ -340,6 +347,7 @@ footer {
         width: 60px;
       }
     }
+
     tr:nth-child(even) {
       td:first-of-type {
         color: $black;
@@ -349,20 +357,22 @@ footer {
         width: 60px;
       }
     }
+
   }
+
   .timeslots-table,
   .seasons-table {
-    width:100% !important;
+    min-width:100%;
 
     thead {
       th {
-        border-top: 1px solid $primary-color !important;
-        border-bottom: 1px solid $primary-color !important;
+        border-top: 1px solid $primary-color;
+        border-bottom: 1px solid $primary-color;
       }
     }
     tbody {
       tr {
-        border: 1px solid $primary-color !important;
+        border: 1px solid $primary-color;
         cursor: pointer;
       }
       td {
@@ -378,6 +388,7 @@ footer {
       tr:nth-child(even) {
         background: $third-color;
         color: $white;
+
         a {
           color: $white;
         }
