Updated the awards
Added more awards after talking to alumni.

--- a/views/about.tmpl
+++ b/views/about.tmpl
@@ -117,6 +117,7 @@
           <li>Silver Best Speech Programming (<a href="{{url "/podcasts/816/"}}">URY: Trimble</a>)</li>
           <li>Silver Best Newcomer (<a href="{{url "/people/8027/"}}">Harry Whittaker</a>)</li>
           <li>Bronze Best Entertainment Show (<a href="{{url "/schedule/shows/12629/"}}">The Harry Whittaker Show</a>)</li>
+          <li>Bronze Kevin Greening Award for Creativity (<a href="{{url "/podcasts/816/"}}">URY: Trimble</a>)</li>
         </ul>
       </div>
       <div class="col-md-6 col-lg-6">
@@ -124,6 +125,43 @@
         <ul>
           <li>Silver Best Station</li>
           <li>Bronze Best Specialist Music Programming (<a href="{{url "/schedule/shows/11183/"}}">URY: Coco Electro</a>)</li>
+        </ul>
+      </div>
+      <div class="col-md-6 col-lg-6">
+        <h2>2011</h2>
+        <ul>
+          <li>Gold Best Entertainment (<a href="{{url "/schedule/shows/11802/"}}">The Chalk and Charles Show</a>)</li>
+          <li>Kevin Greening Award for Creativity (<a href="{{url "/podcasts/390/"}}">The Prince of Humberside</a>)</li>
+          <li>Bronze Best Speech (<a href="{{url "/podcasts/697/"}}">The More Beautiful Game</a>)</li>
+        </ul>
+      </div>
+      <div class="col-md-6 col-lg-6">
+        <h2>2009</h2>
+        <ul>
+          <li>Gold Best Interview (Hilary Benn on Binyam Mohamed)</li>
+          <li>Gold Best Journalistic Programming (<a href="{{url "/schedule/shows/12532/"}}">York Report</a>)</li>
+          <li>Bronze Best Entertainment (<a href="{{url "/schedule/shows/12015/"}}">The Technical Difficulties</a>)</li>
+        </ul>
+      </div>
+      <div class="col-md-6 col-lg-6">
+        <h2>2008</h2>
+        <ul>
+          <li>Inaugural Kevin Greening Award (<a href="{{url "/schedule/shows/12015/"}}">The Technical Difficulties</a>)
+          <li>Gold Best Interview (<a href="{{url "/people/1157/"}}">Rob Watts</a>)</li>
+          <li>Bronze Best Entertainment (<a href="{{url "/schedule/shows/12115/"}}">URY Breakfast: Rob Watts, Steve Gardner, Hannah Green</a>)</li>
+          <li>Bronze Best Male (<a href="{{url "/people/1157/"}}">Rob Watts</a>)</li>
+        </ul>
+      </div>
+      <div class="col-md-6 col-lg-6">
+        <h2>2005</h2>
+        <ul>
+          <li>Best Station</a>
+        </ul>
+      </div>
+      <div class="col-md-6 col-lg-6">
+        <h2>1987</h2>
+        <ul>
+          <li>Best News Programme for the 1987 General Election - National Association of Student Broadcasting/BBC Radio 1</li>
         </ul>
       </div>
     </div>
