add start of show cards

--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -4,6 +4,8 @@
 @import "searchBox";
 @import "backgrounds";
 @import "utils";
+@import "podcastCard";
+@import "showCard";
 
 html {
   font-size: $base-font-size;
