correct class name

--- a/sass/base/_showCard.scss
+++ b/sass/base/_showCard.scss
@@ -12,7 +12,7 @@ $show-bg:#2C3849;
   .show-card-body {
     text-align: center;
     padding: 10px;
-    .show-card-time {
+    .show-card-date {
 
     }
     .show-card-title {
