--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -36,3 +36,39 @@ html {
     }
   }
 }
+
+// Scroll horizontal, used for horizontal scrolling rows
+.scroll-horiz {
+  overflow-x: scroll;
+  overflow-y: hidden;
+  flex-wrap: nowrap;
+  -webkit-overflow-scrolling: touch;
+}
+
+.scroll-none {
+  overflow: auto;
+  flex-wrap: wrap;
+}
+
+@mixin make-scroll-horiz($breakpoint) {
+
+  .scroll-horiz-#{$breakpoint} {
+    overflow-x: scroll;
+    overflow-y: hidden;
+    flex-wrap: nowrap;
+    -webkit-overflow-scrolling: touch;
+  }
+
+  .scroll-none-#{$breakpoint} {
+    overflow: auto;
+    flex-wrap: wrap;
+  }
+}
+
+$breakpoints: sm, md, lg, xl;
+
+@each $bp in $breakpoints {
+  @include media-breakpoint-up($bp) {
+    @include make-scroll-horiz($bp);
+  }
+}
