--- a/views/on_demand.tmpl
+++ b/views/on_demand.tmpl
@@ -24,26 +24,28 @@
   </div>
 </div>
 <div id="index-just-missed" class="container-fluid container-padded bg-primary pb-0">
-  <h2>You Just Missed...</h2>
-  <div class="row scroll-horiz custom-scrollbar pb-3">
-    {{range .PageData.LatestTimeslots}}
-    <div class="col-8 col-sm-5 col-md-4 col-lg-3 col-xl-2">
-      <a class="show-card" href="/schedule/shows/timeslots/{{.TimeslotID}}/">
-        <img class="show-card-img" src="
-            {{if .Season.ShowMeta.Photo}}
-            https://ury.org.uk{{.Season.ShowMeta.Photo}}
-            {{else}}
-              /images/show-current.png
-            {{end}}
-          " alt="{{.Title}} Logo">
-        <div class="show-card-body">
-          <h6 class="show-card-title">{{.Title}}</h6>
-          <span class="show-card-date">{{.StartTime.Format "15:04 - Mon 2 Jan"}} • {{formatDuration .Duration}}</span>
-        </div>
-      </a>
+
+    <h2>You Just Missed...</h2>
+    <div class="row custom-scrollbar scroll-horiz scroll-none-xl pb-3">
+      {{range .PageData.LatestTimeslots}}
+      <div class="col-8 col-sm-7 col-md-4 col-lg-3 col-xl-2">
+        <a class="show-card" href="/schedule/shows/timeslots/{{.TimeslotID}}/">
+          <img class="show-card-img" src="
+              {{if .Season.ShowMeta.Photo}}
+              https://ury.org.uk{{.Season.ShowMeta.Photo}}
+              {{else}}
+                /images/show-current.png
+              {{end}}
+            " alt="{{.Title}} Logo">
+          <div class="show-card-body">
+            <h6 class="show-card-title">{{.Title}}</h6>
+            <span class="show-card-date">{{.StartTime.Format "15:04 - Mon"}} • {{formatDuration .Duration}}</span>
+          </div>
+        </a>
+      </div>
+      {{end}}
     </div>
-    {{end}}
-  </div>
+
 </div>
 <div id="index-videos" class="container-fluid container-padded bg-secondary">
   <div class="row">
