create ury card
These are used for podcasts and shows

--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -4,8 +4,7 @@
 @import "searchBox";
 @import "backgrounds";
 @import "utils";
-@import "podcastCard";
-@import "showCard";
+@import "uryCard";
 
 html {
   font-size: $base-font-size;
